# seekstr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.yml  flake.nix  justfile  resize_profile.sh
doc/: system-architecture.md
lancedb-search/: .env.example  .gitignore  Cargo.toml
lancedb-search/src/: collect.rs  embedding_service.rs  embeddings.rs  lancedb_store.rs  lib.rs  nostr.rs  relay_search.rs  url_extractor.rs
qdrant-search/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml
qdrant-search/examples/: test_client.sh
qdrant-search/src/: embedding_service.rs  event_queue.rs  lib.rs  qdrant_store.rs
scribe/: .gitignore  Cargo.toml  README.md  flake.nix
scribe/src/: config.rs  lib.rs  main.rs  processor.rs  watcher.rs
scribe/src/backends/: mod.rs  openai.rs  ort.rs  vision.rs  whisper.rs  youtube.rs
seekstr/: Cargo.toml  README.md
seekstr/src/: config.rs  image_processor.rs  main.rs  mediaprocessor.rs
