[package]
name = "lancedb-search"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
url = "2.5"
regex = "1.11"

rig-core = { version = "0.21", features = ["all"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
lancedb = "0.22"
arrow-array = "55"
arrow-schema = "55"
futures = "0.3"

tracing-subscriber = "0.3"

[[bin]]
name = "main"
path = "src/bin/main.rs"
