[package]
name = "qdrant-search"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
url = "2.5"
regex = "1.11"

rig-core = { version = "0.21", features = ["all"] }
nostr-sdk = "0.43"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
qdrant-client = "1.13"
futures = "0.3"
chrono = "0.4"

tracing-subscriber = "0.3"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"