[package]
name = "scribe"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "6.1"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
whisper-rs = { version = "0.11", optional = true }
whisper-rs-sys = { version = "0.9", optional = true }

[features]
default = []
whisper = ["whisper-rs", "whisper-rs-sys"]
