[package]
name = "scribe"
version = "0.1.0"
edition = "2024"

[lib]
name = "scribe"
path = "src/lib.rs"

[[bin]]
name = "scribe"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

chrono.workspace = true
anyhow.workspace = true

notify = "8.2"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
url = "2.5"
tempfile = "3.23"
regex = "1.0"
rusty_ytdl = "0.7"
yt-transcript-rs = "0.1.8"
futures-util = "0.3"
whisper-rs = { version = "0.11", optional = true }
whisper-rs-sys = { version = "0.9", optional = true }

[features]
default = []
whisper = ["whisper-rs", "whisper-rs-sys"]
